Implement hybrid auth strategy B
